Refactor so when calling Oauth endpoint from here it actually returns the status codes correctly