@@ -9,8 +9,8 @@ import spark.Request;
 import spark.Response;
 import spark.Route;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -32,28 +32,31 @@ public class Register implements Route {
         );
 
         HttpResponse registerResponse = registerUserToAuthProvider(account);
-        if (registerResponse.getStatusLine().getStatusCode() != 200) {
-            return registerResponse;
+        int registerStatus = registerResponse.getStatusLine().getStatusCode();
+        if (registerStatus != 200) {
+            response.status(registerStatus);
+            return EntityUtils.toString(registerResponse.getEntity());
         }
 
         String payload = EntityUtils.toString(registerResponse.getEntity());
         String userId = new JsonTransformer().render(payload).get("id").toString();
 
         HttpResponse assignResponse = assignUserToApp(userId);
-        if (assignResponse.getStatusLine().getStatusCode() != 200) {
-            return assignResponse;
+        int assignStatus = assignResponse.getStatusLine().getStatusCode();
+        if (assignStatus != 200) {
+            response.status(assignStatus);
+            return EntityUtils.toString(registerResponse.getEntity());
         }
 
-        return EntityUtils.toString(Token.getToken(account.username(), account.password()).getEntity());
+        HttpResponse getTokenResponse = Token.getToken(account.username(), account.password());
+        int getTokenStatus = getTokenResponse.getStatusLine().getStatusCode();
+        response.status(getTokenStatus);
+        return EntityUtils.toString(getTokenResponse.getEntity());
     }
 
     private void convertUrlEncodedToMap(String urlEncoded) {
         String encodedParams;
-        try {
-            encodedParams = URLDecoder.decode(urlEncoded, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        encodedParams = URLDecoder.decode(urlEncoded, StandardCharsets.UTF_8);
 
         String[] params = encodedParams.split("&");
         for (String param : params) {
